Fix missing color in light mode

--- a/src/ui/style.scss
+++ b/src/ui/style.scss
@@ -6,6 +6,9 @@
     --mdc-theme-primary: #3B1E5F;
     --mdc-theme-secondary: #2578B5;
 
+    --mdc-theme-on-surface: #000;
+    --mdc-theme-text-disabled-on-light: rgba(0, 0, 0, 0.5);
+
     --color-pending: #CAAF85;
     --color-pending--dark: #988058;
     --color-pending--light: #fEE1B5;
